[project]
name = "omop-cdm"
version = "0.4.1"
description = "SQLAlchemy ORM of the OHDSI OMOP CDM"
authors = [
    {name = "Spayralbe", email = "stefan@thehyve.nl"},
    {name = "guuswilmink", email = "guus@thehyve.nl"},
]
readme = "README.md"
license = {text = "Apache Software License"}
requires-python = ">=3.9,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "sqlalchemy >= 2.0",
]

[project.urls]
"Repository" = "https://github.com/thehyve/omop-cdm"
"Documentation" = "https://github.com/thehyve/omop-cdm/blob/main/docs/README.md"
"Bug Tracker" = "https://github.com/thehyve/omop-cdm/issues"
"Changelog" = "https://github.com/thehyve/omop-cdm/blob/main/CHANGELOG.md"

[tool.poetry.group.dev.dependencies]
nox = "^2025.5.1"
ruff = "^0.12.8"
pre-commit = "^4.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
testcontainers = "^4.12.0"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = [
    ".",
]
